# photounloaderplusplus

./: .gitignore  CMakeLists.txt  README.md  getfiles.cpp
src/: CMakeLists.txt  concurrentqueue.h  configparser.cpp  configparser.h  destination.cpp  destination.h  filedestinationclosure.cpp  filedestinationclosure.h  main.cpp  missingfileclosure.cpp  missingfileclosure.h  token.cpp  token.h
test/: CMakeLists.txt  test_destination.cpp  test_filedestinationclosure.cpp  test_missingfileclosure.cpp  test_parser.cpp  test_token.cpp  test_tokenstream.cpp
